--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Deze pagina bestaat niet :(</strong></p>
+  <p><a href="/">Terug naar het overzicht van algoritmeregisters</a></p>
 </div>
